iter_language/tests/corpus/valid/queue-servicebus-minimal.iter
queue servicebus {
  fully_qualified_namespace = "iter-bus.servicebus.windows.net"
  entity_kind = "queue"
  queue_name = "signals"
  auth {
    kind = "aad_default"
  }
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
